--- a/src/scss/scss omnibus/_global.scss
+++ b/src/scss/scss omnibus/_global.scss
@@ -4,6 +4,7 @@
 @import "bases/style-guide";
 @import "bases/extends";
 @import "bases/general-styles";
+// @import "bases/swiper";
 
 @import "blocks/navbar-header";
 @import "blocks/footer";
