--- a/public/style-guide.css
+++ b/public/style-guide.css
@@ -86,6 +86,9 @@ small {
 /**
  * Remove the border on images inside links in IE 10.
  */
+img {
+  border-style: none;
+}
 
 /* Forms
    ========================================================================== */
@@ -213,8 +216,8 @@ small {
   --color-text-white: #fefefe;
   --color-title: var(--color-white);
   --color-title-white: var(--color-white);
-  --color-background-primary: #0c0c0c;
-  --color-background-secondary: #121212;
+  --color-background-primary: #fefefe;
+  --color-background-secondary: #fefefe;
   --color-icons-primary: var(--color-primary-500);
   --color-footer: var(--color-primary-900);
   --scrollbar: var(--color-secondary-500);
@@ -243,9 +246,23 @@ small {
   transition: background-color 0.3s ease, color 0.5s ease, transform 0.3s ease;
   border: 1px solid var(--color-white);
 }
-.mybtn:hover {
-  color: var(--color-text);
-  background-color: var(--color-white);
+.mybtn span {
+  color: var(--color-white);
+}
+.mybtn svg {
+  fill: var(--color-white);
+}
+@media (hover: hover) {
+  .mybtn:hover {
+    color: var(--color-text);
+    background-color: var(--color-white);
+  }
+  .mybtn:hover span {
+    color: var(--color-text);
+  }
+  .mybtn:hover svg {
+    fill: var(--color-text);
+  }
 }
 .mybtn:active {
   transform: scale(0.95);
@@ -375,6 +392,7 @@ h4 {
   --space-7: 32px;
   --space-8: 40px;
   --space-9: 48px;
+  --space-10: 56px;
 }
 @media screen and (min-width: 768px) {
   :root {
@@ -386,7 +404,8 @@ h4 {
     --space-6: 32px;
     --space-7: 40px;
     --space-8: 48px;
-    --space-9: 64px;
+    --space-9: 66px;
+    --space-10: 74px;
   }
 }
 
@@ -468,7 +487,7 @@ h4 {
 html body {
   max-width: var(--width-100vw);
   max-width: 100vw;
-  color: var(--color-white);
+  color: var(--color-text);
   font-family: "p";
   font-size: 1rem;
   position: relative;
@@ -503,6 +522,10 @@ a {
   color: inherit;
 }
 
+img {
+  max-width: 100%;
+}
+
 .container-lg {
   max-width: 1140px;
   margin-right: auto;
@@ -526,7 +549,7 @@ a {
   align-items: center;
   transition: transform 0.5s ease, height 0.3s ease, background-color 0.3s ease;
 }
-@media screen and (min-width: 758px) {
+@media screen and (min-width: 1014px) {
   .navbar-header {
     flex-direction: row;
     justify-content: space-between;
@@ -543,12 +566,23 @@ a {
   transition: 0.3s ease;
   height: 4.5rem;
 }
+.navbar-header .container-logo .logo .logo_description {
+  display: none;
+}
 .navbar-header .container-logo .logo:hover {
   transform: scale(1.015);
 }
-@media screen and (min-width: 758px) {
+@media screen and (min-width: 1014px) {
   .navbar-header .container-logo .logo {
     cursor: pointer;
+    height: 8rem;
+  }
+  .navbar-header .container-logo .logo .logo_description {
+    display: block;
+  }
+}
+@media screen and (min-width: 1186px) {
+  .navbar-header .container-logo .logo {
     height: 10rem;
   }
 }
@@ -559,7 +593,7 @@ a {
   justify-content: space-between;
   width: 100%;
 }
-@media screen and (min-width: 758px) {
+@media screen and (min-width: 1014px) {
   .navbar-header .navbar-header__second {
     width: -moz-min-content;
     width: min-content;
@@ -574,6 +608,7 @@ a {
   padding-bottom: 3px;
 }
 .navbar-header .navbar-header__second .navbar__actions .bag {
+  position: relative;
   cursor: pointer;
   vertical-align: middle;
 }
@@ -592,20 +627,28 @@ a {
 .navbar-header .navbar-header__second .navbar__actions .bag:hover .bag__icon--outline {
   opacity: 0;
 }
+.navbar-header .navbar-header__second .navbar__actions .bag:hover::before {
+  opacity: 1;
+}
 .navbar-header .navbar-header__second .navbar__actions .bag span {
   margin-top: 2px;
   line-height: 1;
 }
 .navbar-header .navbar-header__second .navbar__actions .bag::before {
-  content: "3";
+  content: "99";
   display: flex;
   justify-content: center;
   align-items: center;
   color: var(--color-text);
-  height: 20px;
-  width: 20px;
+  padding: 8px 4px;
   background-color: white;
-  border-radius: 20px;
+  border-radius: 16px;
+  font-size: 12px;
+  position: absolute;
+  top: 12px;
+  left: -4px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
 }
 .navbar-header .navbar-header__second .navbar__actions > * {
   display: none;
@@ -626,7 +669,7 @@ a {
 .navbar-header .navbar-header__second .navbar__hamburguer {
   z-index: 30;
 }
-@media screen and (min-width: 758px) {
+@media screen and (min-width: 1014px) {
   .navbar-header .navbar-header__second .navbar__hamburguer {
     display: none;
   }
