--- a/src/scss/scss omnibus/bases/_general-styles.scss
+++ b/src/scss/scss omnibus/bases/_general-styles.scss
@@ -27,7 +27,7 @@ html {
 	body {
 		max-width: var(--width-100vw);
 		max-width: 100vw;
-		color: var(--color-white);
+		color: var(--color-text);
 		font-family: "p";
 		font-size: 1rem;
 		// height: 100%;
