--- a/src/scss/scss pages/index.scss
+++ b/src/scss/scss pages/index.scss
@@ -39,14 +39,14 @@ body {
 
         .video-header__content-text{
           margin-top: auto;
-          margin-bottom: 12rem;
+          margin-bottom: 20vh;
           overflow: hidden;
           width: 100%;
           display: flex;
           flex-direction: column;
           align-items: center;
           font-weight: 200;
-          gap: var(--space-5);
+          gap: var(--space-3);
           .video-header__tittle {
             letter-spacing: 1px;
             line-height: 1.5;
@@ -60,16 +60,77 @@ body {
 
   .main {
     section {
-      min-height: 400px;
       width: 100%;
     }
 
     .section-1 {
-      background-color: rgba(255, 255, 255, 0.8);
+      width: 100%;
+      height: 100vh;
+      .mySwiper{
+        height: 100%;
+        width: 100%;
+        .swiper-wrapper{
+          .swiper-slide{
+            height: 100%;
+            width: 100%;
+            .mySwiper__img{
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              object-position: top;
+              
+            }
+          }
+        }
+        .mySwiper__buttons{
+          .swiper-button-next, .swiper-button-prev{
+            width: auto;
+            color: var(--color-white);
+            padding: 8px 20px;
+
+            &::after{
+              content: "";
+            }
+          }
+
+          .swiper-button-prev{
+            padding: 8px;
+            left: var(--space-9);
+            display: none;
+            svg{
+              transform: translateX(4px);
+            }
+            @include tablet-landscape{
+              display: flex;
+            }
+          }
+          .swiper-button-next{
+            right: var(--space-3);
+            @include tablet-landscape{
+              right: var(--space-9);
+            }
+          }
+        }
+
+      }
     }
 
     .section-2 {
-      background-color: rgb(41, 101, 150);
+      background-color: var(--color-background-primary);
+      height: min-content;
+      padding-top: var(--space-10);
+      padding-bottom: var(--space-10);
+      gap: var(--space-5);
+      
+      @extend .flex-center, .flex-column;
+      .about__logo{
+        svg{
+          height: 10rem;
+          width: auto;
+          max-width: 100%;
+        }
+      }
+
     }
   }
 }
