--- a/public/index.css
+++ b/public/index.css
@@ -208,7 +208,7 @@ img {
   --color-secondary-900: #3b0000;
   --color-btn: var(--color-primary-300);
   --color-btn-hovered: var(--color-white);
-  --color-btn-outlined: var(--color-white);
+  --color-btn-outlined: var(--color-text);
   --color-btn-tonal: var(--color-primary-500);
   --color-btn-tonal-hovered: var(--color-primary-600);
   --color-btn-call: var(--color-primary-900);
@@ -273,6 +273,12 @@ img {
   color: var(--color-btn-outlined);
   border: 1px solid var(--color-btn-outlined);
   box-shadow: none;
+}
+@media (hover: hover) {
+  .mybtn--outlined:hover {
+    color: var(--color-white);
+    background-color: var(--color-text);
+  }
 }
 
 .mybtn--tonal {
@@ -450,7 +456,7 @@ h4 {
   bottom: 0;
 }
 
- body .main .section-2, body .main .section-1 .mySwiper .swiper-wrapper .swiper-slide .mySwiper__text, body .header .video-header .video-header__text, .navbar__hamburguer, .navbar-header .navbar-header__second .navbar__links, .navbar-header .navbar-header__second .navbar__actions .bag {
+ body .main .section-3 .cards, body .main .section-2, body .main .section-1 .mySwiper .swiper-wrapper .swiper-slide .mySwiper__text, body .header .video-header .video-header__text, .navbar__hamburguer, .navbar-header .navbar-header__second .navbar__links, .navbar-header .navbar-header__second .navbar__actions .bag {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -981,4 +987,25 @@ body .main .section-2 .about__logo svg {
   height: 10rem;
   width: auto;
   max-width: 100%;
+}
+body .main .section-3 .cards {
+  width: 100%;
+  margin-top: var(--space-9);
+  margin-bottom: var(--space-9);
+  gap: var(--space-7);
+}
+body .main .section-3 .cards .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  gap: var(--space-2);
+  border: 1px solid black;
+  padding: var(--space-5);
+}
+body .main .section-3 .cards .card h3, body .main .section-3 .cards .card p {
+  text-align: center;
+}
+body .main .section-3 .cards .card .card__icon {
+  height: 80px;
 }
