--- a/src/scss/scss omnibus/blocks/_contact-button.scss
+++ b/src/scss/scss omnibus/blocks/_contact-button.scss
@@ -10,7 +10,6 @@
     display: flex;
     margin-right: auto;
     margin-left: auto;
-    // background-image: radial-gradient(ellipse at 50% 100%, #000000 -50%, #00000000 75%);
     flex-direction: row;
     align-items: center;
     justify-content: center;
@@ -19,11 +18,6 @@
     transition: transform .5s ease-in-out;
     z-index: $z-index-2;
 
-    @include landscape {
-        background-image: none;
-        right: auto;
-        left: 1rem;
-    }
 
     &:active {
         // transform: scale(.65);
@@ -36,7 +30,7 @@
 
     @media (hover: hover) {
         &:hover {
-            &::after {
+            &::before {
                 opacity: 1;
             }
 
@@ -47,7 +41,7 @@
     }
 
     @include min-width(1200px) {
-        &::after {
+        &::before {
             content: "Comenzar una conversacion por WhatsApp";
             font-size: 14px;
             padding: 12px;
